# SimpleRegions

./: Cargo.toml
.github/workflows/: rust.yml
src/: lib.rs
src/commands/: mod.rs  region_command.rs
src/listeners/: mod.rs  player_move.rs
src/region/: mod.rs
src/region/tag/: mod.rs
src/util/: mod.rs  player_util.rs  task_util.rs
