[package]
name = "simple-regions"
version = "0.1.0"
edition = "2024"

[lib] 
crate-type = ["cdylib"]

[dependencies]
# pumpkin = { git = "https://github.com/PumpkinPlugins/PumpkinCE", branch = "master" }
# pumpkin-util = { git = "https://github.com/PumpkinPlugins/PumpkinCE", branch = "master" }
# pumpkin-api-macros = { git = "https://github.com/PumpkinPlugins/PumpkinCE", branch = "master" }
# pumpkin-world = { git = "https://github.com/PumpkinPlugins/PumpkinCE", branch = "master" }
# pumpkin-data = { git = "https://github.com/PumpkinPlugins/PumpkinCE", branch = "master" }
pumpkin = { git = "https://github.com/tn-lorenz/Pumpkin", branch = "feat-schedulers" }
pumpkin-util = { git = "https://github.com/tn-lorenz/Pumpkin", branch = "feat-schedulers" }
pumpkin-api-macros = { git = "https://github.com/tn-lorenz/Pumpkin", branch = "feat-schedulers" }
pumpkin-world = { git = "https://github.com/tn-lorenz/Pumpkin", branch = "feat-schedulers" }
pumpkin-data = { git = "https://github.com/tn-lorenz/Pumpkin", branch = "feat-schedulers" }

async-trait = "0.1.88"
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
futures = "0.3.31"
log = "0.4"
dashmap = "6.1.0"
uuid = "1.17.0"
once_cell = "1.21.3"

[profile.release] 
lto = true
